--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>MINECRAFT</h1>
+
+    <h2>Minecraft est l'un des jeux vidéo les plus populaires et les plus influents de l'histoire du jeu vidéo, et il a su captiver des millions de joueurs<br>
+        à travers le monde depuis sa sortie. Son univers riche, son gameplay ouvert et créatif, ainsi que ses possibilités infinies en ont fait un phénomène<br>
+        mondial, adoré par des personnes de tous âges.</h2>
 </body>
 </html>
