--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <h1>MINECRAFT</h1>
 
-    <h2>Minecraft est l'un des jeux vidéo les plus populaires et les plus influents de l'histoire du jeu vidéo, et il a su captiver des millions de joueurs<br>
+    <p>Minecraft est l'un des jeux vidéo les plus populaires et les plus influents de l'histoire du jeu vidéo, et il a su captiver des millions de joueurs<br>
         à travers le monde depuis sa sortie. Son univers riche, son gameplay ouvert et créatif, ainsi que ses possibilités infinies en ont fait un phénomène<br>
-        mondial, adoré par des personnes de tous âges.</h2>
+        mondial, adoré par des personnes de tous âges.
+    </p>
 </body>
 </html>
