--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
 
     <p>
         <ul>
-            <li>La liberté de création :</br>
+            <li><strong>La liberté de création</strong> :</br>
                 L'une des caractéristiques les plus marquantes de Minecraft est la liberté qu'il offre aux joueurs. Dans le mode Créatif, il n'y a</br>
                 aucune limite à la construction : des châteaux médiévaux imposants, des répliques exactes de villes célèbres ou même des machines complexes peuvent voir le jour.</br>
                 Cette possibilité de créer et d'inventer sans fin est l'une des raisons pour lesquelles le jeu est apprécié par des créateurs de contenu et des architectes en herbe.
             </li>
-            <li>La dimension communautaire :</br>
+            <li><strong>La dimension communautaire</strong> :</br>
                 Minecraft a su fédérer une communauté mondiale extrêmement active. Les joueurs peuvent partager leurs créations, participer à des</br>
                 serveurs multijoueurs ou encore rejoindre des forums et des groupes de discussion. Cette forte implication de la communauté a donné naissance à des mods</br>
                 (modifications du jeu) qui enrichissent l'expérience, en ajoutant de nouvelles fonctionnalités, de nouveaux objets et même de nouveaux mondes.
             </li>
-            <li>Le monde infini et généré de manière procédurale :</br>
+            <li><strong>Le monde infini et généré de manière procédurale</strong> :</br>
                 L'un des aspects les plus fascinants de Minecraft est la manière dont le monde est généré. Grâce à un algorithme</br>
                 procédural, chaque monde de Minecraft est unique, offrant ainsi des aventures sans fin. Les joueurs peuvent explorer des montagnes majestueuses, des déserts arides,</br>
                 des océans remplis de secrets, et chaque génération est différente, créant un sentiment d'infinité.
             </li>
-            <li>L'aspect éducatif :</br>
+            <li><strong>L'aspect éducatif</strong> :</br>
                 Minecraft a été utilisé dans de nombreux établissements scolaires à travers le monde. Sa capacité à encourager la créativité, la résolution de problèmes, la</br>
                 coopération et même l'apprentissage des sciences et des mathématiques en fait un outil pédagogique très prisé. Par exemple, des élèves peuvent apprendre à créer</br>
                 des circuits avec la redstone, comprendre les principes de la physique ou étudier l'architecture à travers leurs propres constructions.
             </li>
-            <li>Un univers accessible à tous :</br>
+            <li><strong>Un univers accessible à tous</strong> :</br>
                 Un autre facteur de succès de Minecraft réside dans sa simplicité apparente. Le jeu est facile à prendre en main, et son interface intuitive permet aux</br>
                 joueurs de se concentrer sur l'exploration et la construction. Cependant, cette simplicité n'est pas synonyme de superficialité : les joueurs expérimentés</br>
                 peuvent s'attaquer à des défis de plus en plus complexes, que ce soit pour construire des machines sophistiquées ou explorer des dimensions lointaines comme</br>
